new version paper

--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/main.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/main.tex
@@ -28,7 +28,7 @@ Secondly, following increased democratization, electoral politics became competi
 
 Thirdly, the country saw a modest increase in public expenditures and redistribution following protests and increasing popularity of socialist politicians. Compared to other Western countries, social expenditures in the Netherlands were at a similar level, but rather low in absolute terms, and failed to reach a breakthrough until well after the Second World War. [REF] Oftentimes, proposals to give the state an increasing role in the economy were met with fierce opposition, especially from Catholic politicians, who opted for a privatized form of care organized on the basis of the country's religious 'pillars', although at various points in time, near unanimity was reached to amend particularly pressing issues, such as child labor, public housing, and education. \autocite{van2013eerste}
 
-When comparing the Netherlands to other Western European countries,  the pattern of suffrage extensions seems to have been very much in line with various other Western European countries. Most Western European countries seem to have enacted constitutional reforms, if not in the early 19th century, then after the Paris Commune and 1848 Riots. The majority of countries then embarked on a similar trajectory culminating in universal suffrage shortly after World War I, with only very few countries granting universal suffrage at once \autocite{caramani2017elections}. The trajectory with respect to gender discrimination was also similar. A French court decided against suffrage of women in 1885 \autocite{przeworski2009conquered}, whereas in the Netherlands, attempts by feminist activist Aletta Jacobs to secure female suffrage were sabotaged in 1887 by a constitutional amendment.\footnote{This 1887 amendment did however, imply a substantial extension of suffrage to men.} Countries that instigated universal male suffrage around the same time as the Netherlands (1917) include Luxembourg, the United Kingdom, Sweden, and many others. \autocite{caramani2017elections}
+When comparing the Netherlands to other Western European countries,  the pattern of suffrage extensions seems to have been very much in line with various other Western European countries. Most Western European countries seem to have enacted constitutional reforms, if not in the early 19th century, then after the 1848 riots or the Paris Commune. The majority of countries then embarked on a similar trajectory culminating in universal suffrage shortly after World War I, with only very few countries granting universal suffrage at once \autocite{caramani2017elections}. The trajectory with respect to gender discrimination was also similar. A French court decided against suffrage of women in 1885 \autocite{przeworski2009conquered}, whereas in the Netherlands, attempts by feminist activist Aletta Jacobs to secure female suffrage were sabotaged in 1887 by a constitutional amendment.\footnote{This 1887 amendment did however, imply a substantial extension of suffrage to men.} Countries that instigated universal male suffrage around the same time as the Netherlands (1917) include Luxembourg, the United Kingdom, Sweden, and many others. \autocite{caramani2017elections}
 
 When comparing the Netherlands to other countries in terms of public expenditures and redistribution, roughly the same view arises: the Netherlands seem to slightly lag behind some of their neighbouring countries, only catching up after World War II \autocite{lindert2004growing}. In particular, social transfers as a percentage of GDP remained low relative to other countries, stagnating at about 2.5\% of GDP before 1930, at a level comparable to France and Italy at a time. Other parts of public expenditures were similarly small, with the notable exception of expenditures on education, which the government agreed to finance in 1917. School enrollment was on a level comparable to Belgium, France and Norway. Poor relief as government expenditure was also a very marginal part of GDP, at least up until 1880. \autocite{van2000eenheiddstaat, lindert2004growing}
 
@@ -36,7 +36,7 @@ In sum, the Netherlands seem to undergo trends in parallel to various other (Wes
 
 Many researchers allege that politicians are inclined to pursue their own interests instead of the interests of their constituents. \autocite{lizzeri2004did, duggan2017political, corvalan2020political} Politicians more similar to the general population might be more inclined to pursue policies that favor redistribution, intervention, and progressive taxation. Finding out whether, and to what extent, politicians are similar to the population provides us with evidence as to whether this mechanism is at play or not: the personal wealth of politicians can influence the trajectories of public spending, and democratization. Furthermore, another important motive for finding out how wealthy politicians are is provided by the literature on political selection. Many empirical and theoretical studies have argued that following a relaxation in eligibility and suffrage restrictions historically employed by many countries, the political arena should  become more diverse in terms of social origin, gender, and many other aspects.\autocite{besley1997economic, besley2005political, bernini2018race} In addition, several theoretical models, as well as empirical studies, e.g.  show that government policy is responsive to changes in the characteristics of politicians. \autocite{meltzer1981rational, besley2011educated, chattopadhyay2004women, hayo2014political} Hence, the continuity, or change, in the composition of politicians can influence political decision-making. 
 
-Whereas the present-day literature has investigated various factors, as of yet, the role of personal wealth of politicians has never been elucidated. For starters, it is unknown whether and to what extent the wealth of the political elite resembles the general population. Secondly, it is unknown what the consequences are of a wealth gap between politicians and their constituents. In this paper, we first show the evolution of wealth in parliament over time. We use carefully compiled list of all members per parliament, including politicians who took the place of politicians who resigned, died, or left their position because of other reasons. We identify the wealthiest and poorest members of parliament. Furthermore, we contrast the lower house to the upper house. It is well known that the upper house remained much more exclusive than the lower house, the entry of which was (in theory) open to any male candidate. \autocite{van1983toegang} We also distinguish between lower house members, provincial executives and ministers. In other words, this paper makes a step in the direction of finding out what the role of politicians is by asking how large the gap is between politicians and the electorate in terms of wealth and several other characteristics, and how this various over time when various suffrage extensions are enacted (an aspect which the Netherlands shares with many other countries) and with respect to political affiliation (an aspect in which the Netherlands is rather unique). 
+Whereas the present-day literature has investigated various factors, as of yet, the role of personal wealth of politicians has never been elucidated. For starters, it is unknown whether and to what extent the wealth of the political elite resembles the general population. Secondly, it is unknown what the consequences are of a wealth gap between politicians and their constituents. In this paper, we first show the evolution of wealth in parliament over time. We use carefully compiled lists of all members per parliament, including politicians who took the place of politicians who resigned, died, or left their position because of other reasons. We identify the wealthiest and poorest members of parliament. Furthermore, we contrast the lower house to the upper house. It is well known that the upper house remained much more exclusive than the lower house, the entry of which was (in theory) open to any male candidate. \autocite{van1983toegang} We also distinguish between lower house members, provincial executives and ministers. In other words, this paper makes a step in the direction of finding out what the role of politicians is by asking how large the gap is between politicians and the electorate in terms of wealth and several other characteristics, and how this various over time when various suffrage extensions are enacted (an aspect which the Netherlands shares with many other countries) and with respect to political affiliation (an aspect in which the Netherlands is rather unique). 
 
 In the context of pillarization, we also compare and contrast the wealth of politicians of different parties, shedding light on two questions: firstly, do there exist substantial differences in wealth between politicians of different religious affiliation or political ideology? Secondly, how does this difference evolve over time? The latter question sheds light on mechanisms at play in political selection: politicians join political parties, and are endorsed by newspapers, which sharply influence political competition over time. Facing a changing electoral environment, political parties are likely to take different decisions regarding the politicians they choose to support. One likely way in which this change could manifest itself is by allowing candidates of different wealth levels and different social origins to be candidates, given an electorate that might be more inclined to opt for these candidates. 
 
@@ -44,9 +44,9 @@ We find that, throughout the entire period of investigation, there is a substant
 
 
 \section{Definition of the Political Elite}
-The political elite is often used as a synonym for a country's rulers, however, it is subjective in its nature. In this paper, we take the political elite to consist of following individuals: First, all lower house members, that is to say, representatives elected directly by the enfranchised population. Compared to the restrictions on eligiblity for the upper house, there were almost no restrictions on being a member of the lower house: one had to be male, and be 30 years or older, which was decreased to 25 years or older following the introduction of male suffrage in 1917. The exclusion of female candidates was subsequently ended in 1918. 
+The political elite is often used as a synonym for a country's rulers, however, it is subjective in its nature. In this paper, we take the political elite to consist of following individuals: First, all lower house members, that is to say, representatives elected directly by the enfranchised population. Compared to the restrictions on eligiblity for the upper house, there were almost no restrictions on being a member of the lower house: one had to be male, and be 30 years or older, which was decreased to 25 years or older following the introduction of male suffrage in 1917. The exclusion of female candidates was subsequently ended in 1918. \autocite{van2018tussen} 
 
-Second, all upper house members, senators whose formal task is to verify the judicial coherence of all laws approved by the lower house, but whose role in practice is frequently political. Upper house members are elected indirectly, according to a system which is based on provincial elections: the enfranchised population elect provincial deputies, \textit{Gedeputeerden}, who in turns elect representatives as upper house members. The legal restrictions on being a candidate for Upper house membership were very strong throughout the entire period under investigation: one had to be male, and be on the \textit{Lijst van hoogst aangeslagenen in 's Rijks directe belastingen}, a list comprising individuals in each province who contributed the most to the country's tax revenue. The criteria to be on these lists varied sharply per province, but was usually modified such as to include about one individual for every 3000 inhabitants of the province in 1848. Later, as a result of the changes in the Electoral law in 1887, the requirements were laxened, and the lists were extended to incorporate one individual for every 1500 inhabitants, effectively increasing the candidate pool to be elected to the upper house. In 1917, all such restrictions were abolished, leaving only gender restrictions in place, which were in turn abolished two years later. In table \ref{tab:upperhouselowerhouse}, We summarize the changes in restrictions on eligibility and suffrage until the introduction of universal suffrage in 1919. 
+Second, all upper house members, senators whose formal task is to verify the judicial coherence of all laws approved by the lower house, but whose role in practice is frequently political.\autocite{van1999eerste} Upper house members are elected indirectly, according to a system which is based on provincial elections: the enfranchised population elect provincial deputies, \textit{Gedeputeerden}, who in turns elect representatives as upper house members. The legal restrictions on being a candidate for Upper house membership were very strong throughout the entire period under investigation: one had to be male, and be on the \textit{Lijst van hoogst aangeslagenen in 's Rijks directe belastingen}, a list comprising individuals in each province who contributed the most to the country's tax revenue. \autocite{moes1994lijsten} The criteria to be on these lists varied sharply per province, but was usually modified such as to include about one individual for every 3000 inhabitants of the province in 1848. \autocite{moes2012onder} Later, as a result of the changes in the Electoral law in 1887, the requirements were laxened, and the lists were extended to incorporate one individual for every 1500 inhabitants, effectively increasing the candidate pool to be elected to the upper house. In 1917, all such restrictions were abolished, leaving only gender restrictions in place, which were in turn abolished two years later. In table \ref{tab:upperhouselowerhouse}, we summarize the changes in restrictions on eligibility and suffrage until the introduction of universal suffrage in 1919. 
 
 \begin{table}[!ht]
     \footnotesize
@@ -68,19 +68,17 @@ Second, all upper house members, senators whose formal task is to verify the jud
     \label{tab:upperhouselowerhouse}
 \end{table}
 
-Third, executives, called \textit{Ministers}, are also included. Ministers are the executives of governmental departments and are in charge of the daily functioning of their departments. They are also subject to accountability from the lower house, and they are charged with being the law-making organ. As a result, Ministers are the most powerful politicians, especially when confronted with a conducive, rather than obstructive, parliament. 
+Third, executives, called \textit{Ministers}, are also included. Ministers are the executives of governmental departments and are in charge of the daily functioning of their departments. They are also subject to accountability from the lower house, and they are charged with being the law-making organ. \autocite{secker1991ministers} As a result, Ministers are the most powerful politicians, especially when confronted with a conducive, rather than obstructive, parliament. \autocite[16]{bosmans2011parlementaire}
 
-Fourth, the definition of political elite includes provincial-level executives. The provincial executive branches are headed by \textit{Commissarissen}, top provincial-level executives, who are in charge of provincial policy and of the daily functioning of provincial governance. Each separate province has its own \textit{Commissaris}, who are all on equal-footing with each other. Oftentimes, provincial politics is seen as a gateway to national politics: many nationally active politicians found their way into the spotlights of their parties and the national media by becoming active in municipal or provincial politics. Similarly, provincial politics often offered a home to national politicians who had lost elections, or no further desire to pursue national politics. The last category of politicians we consider to be part of the political elite are the \textit{Gedeputeerden}: provincial equivalents of ministers, who form the provincial executives together with one \textit{Commissaris}. Like their national equivalents, they have their own portfolio, specializing in a particular area of policy. They are subject to control by provincial parliaments, called \textit{Provinciale Staten}, who are in turn directly elected. 
+Fourth, the definition of political elite includes provincial-level executives. The provincial executive branches are headed by \textit{Commissarissen}, top provincial-level executives, who are in charge of provincial policy and of the daily functioning of provincial governance. Each separate province has its own \textit{Commissaris}, who are all on equal-footing with each other. Oftentimes, provincial politics is seen as a gateway to national politics: many nationally active politicians found their way into the spotlights of their parties and the national media by becoming active in municipal or provincial politics. Similarly, provincial politics often offered a home to national politicians who had lost elections, or no further desire to pursue national politics. The last category of politicians we consider to be part of the political elite are the aforementioned \textit{Gedeputeerden}: provincial equivalents of ministers, who form the provincial executives together with one \textit{Commissaris}. Like their national equivalents, they have their own portfolio, specializing in a particular area of policy. They are subject to control by provincial parliaments, called \textit{Provinciale Staten}, who are in turn directly elected. \autocite{blok1987stemmen}
 
 \section{Data}
 \subsection{Memories van Successie}
-We use hand-collected probate inventories, \textit{Memories van Successie} from various archival sources. Probate inventories were administered by the Dutch tax administration for the purpose of levying inheritance taxes (from 1877 onwards). As a rule, the probate inventories had to be filed with the tax administration at the place of death. As a result, the \textit{Memories van Successie} are publicly available in the country's provincial archives. We use the known place of death of all [NUMBER] politicians to locate the archival source and retrieve the probate inventory. Oftentimes, however, the probate inventory is filed not in the municipality of decease, but at a location with which a politician had a particular bond during their lifetime. Therefore, We employed the strategy of looking for a particular probate inventory in two places: the actual place of death, which is objective, and the place of bonding, which is more subjective and open to judgement. Using either one of the aforementioned strategies allowed me to find 751 politicians' probate inventories. 
+We gather hand-collected probate inventories, \textit{Memories van Successie} from provincial archives all over the Netherlands. Probate inventories were administered by the Dutch tax administration for the purpose of levying inheritance taxes (from 1877 onwards). \autocite{bos1989memories} As a rule, the probate inventories had to be filed with the tax administration at the place of death. As a result, the \textit{Memories van Successie} are publicly available in the country's provincial archives. We use the known place of death of all [NUMBER] politicians to locate the archival source and retrieve the probate inventory. Oftentimes, however, the probate inventory is filed not in the municipality of decease, but at a location with which a politician had a particular bond during their lifetime. Therefore, we employed the strategy of looking for a particular probate inventory in two places: the actual place of death, which is objective, and the place of bonding, which is more subjective and open to judgement. Using either one of the aforementioned strategies allowed me to find 751 politicians' probate inventories. 
 
 These probate inventories contain some metadata (including the place of death and time of death, with the help of which the inventories were found), and then (usually) contain a complete list of an individuals assets and liabilities. Two special cases deserve attention: first, some politicians died with 0 or negative net wealth. In a subset of these cases, this is written using words, and an exhaustive list of all assets and liabilities is missing. In other cases, however, the list is there, and net wealth is present as usual. Second, some politicians are claimants to inheritances that are yet to be divided among heirs. In this case, oftentimes all assets yet to be divided are listed, as are all (eventual) liabilities. After a calculation of the net value of the inheritance, the corresponding share of the inheritance accruing to the subject of the probate inventory is added. In some cases, however, the value of the assets and liabilities is directly discounted to the share accruing to the subject of the probate inventory. Finally, sometimes, a claim to an inheritance is sometimes listed describing no underlying assets and merely the value of the claim. Since there were no explicit accounting guidelines, this is often left to the discretion of the tax agent assembling the probate inventory. This is important because it leads to consequences when classifying assets. 
 
-We categorize all assets in the probate inventories according to 10 categories: real estate, Dutch and foreign government bonds, Dutch and foreign private bonds, Dutch and foreign stocks, cash and other liquid assets, and miscellaneous assets.\footnote{Private bonds can be owed by  both firms and individuals.}
-
-In some cases, it is also possible to retrieve who were creditors of the probate inventory's subject. These cases, however, were few, and creditors were mostly private individuals, leaving little benefit to categorization. The aforementioned way of incorporating claims on inheritances in probate inventories leads to the fact that some inheritance claims have been categorized according to asset group, whereas some other inheritances had to be classified as bonds (because they represent claims on other assets). 
+We categorize all assets in the probate inventories according to 10 categories: real estate, Dutch and foreign government bonds, Dutch and foreign private bonds, Dutch and foreign stocks, cash and other liquid assets, and miscellaneous assets.\footnote{Private bonds can be owed by  both firms and individuals.} In some cases, it is also possible to retrieve who were creditors of the probate inventory's subject. These cases, however, were few, and creditors were mostly private individuals, leaving little benefit to categorization. The aforementioned way of incorporating claims on inheritances in probate inventories leads to the fact that some inheritance claims have been categorized according to asset group, whereas some other inheritances had to be classified as bonds (because they represent claims on other assets). 
 
 Taxation of the probate inventories took place in various ways, depending on asset class: first, the value of stocks and bonds that were traded on the Amsterdam stock exchange (be it domestic or foreign) was directly taken from the \textit{Prijscourant}, an official publication detailing the price of all securities on a daily basis. Next, taxation of all other assets is arbitrary. In case of private bonds (credit to other individuals), taxation generally amounts to taking the nominal value of a bond. It does not take into account the (present) value of interest payments, and neither does it take into account the risk to future cash flows. In case of equities that are not listed, such as a share in a private firm, or real estate, the source of taxation is opaque.\footnote{As of present day, the Dutch tax administration still values real estate in an arbitrary way which differs from municipality to municipality (the administrative unit for real estate taxation). The model used by municipalities is not publicly known.} It is supposed that this taxation roughly reflects the actual value of the underlying assets. 
 
@@ -89,7 +87,9 @@ Access to the probate inventories is limited due to two reasons. First, practica
 \subsection{Biographical Data}
 Second, We obtain data regarding politicians' careers and social origin from the \href{www.pdc.nl}{\textit{Politiek Documentatie Centrum}}, a private think-tank focused on Dutch national politics. This dataset contains information about all ministers, lower house, upper house members, and the main provincial executives, the \textit{Commissarissen}. We append this dataset by including a hand-collected dataset about provincial assistant-executives, \textit{Gedeputeerden}. These data encompass information about politicians' places of birth and decease, and birth and decease dates, as well as all functions they occupied during their lifetimes (as far as they are known). 
 
-These data allow me to determine when politicians were elected and when their mandates ended (either because they chose to pursue another activity, or because they lost an election). These data also include a classification of a politician's ideology: in case of no political party affiliation, this contains a judgement by political historians, but in the majority of cases, this contains the objective political party of which the politician is a member. 
+These data allow us to determine when politicians were elected and when their mandates ended (either because they chose to pursue another activity, or because they lost an election). These data also include a classification of a politician's ideology: in case of no political party affiliation, this contains a judgement by political historians, but in the majority of cases, this contains the objective political party of which the politician is a member. 
+
+We also use data on politicians from the \textit{Parlement \& Kiezer} series to extract the names of politicians in parliamentary runs. The data provided by the PDC contain information about the starting and ending date of a politician's career, but not directly about to which parliaments they were elected. As a result, uncritical use of the data could lead to politicians being considered as being in a parliament while in fact, they weren't, in the case they weren't continuously members of parliament between their starting and ending date. Hence, we gather all names manually from \textit{Parlement \& Kiezer}, and match them to the names present in the PDC-database, so as to get an exact overview of all MPs in a particular parliament. 
 
 \subsection{Inflation and Wages}
 The appraisal of an individual's assets is denominated in local currency (the Dutch guilder). To ensure intertemporal comparability, that is, comparability between politicians who died at various points in time, we deflate the numbers from the \textit{Memories van Successie} using the data on inflation by Reinhardt \& Rogoff.\footnote{Available \href{https://carmenreinhart.com/2020/02/netherlands/}{here}}
@@ -99,10 +99,34 @@ To further facilitate the interpretability of the analysis, we convert wealth to
 \section{Wealth and Political Affiliation}
 It is often thought that political affiliation and personal wealth of politicians are related. For example, it is frequently thought that individuals from a working class or agricultural background might be more prone to become a socialist, because socialist ideology and politics might represent their interests better than other political parties and ideologies. 
 
+
+\begin{center}
+    
+    [grafiek tweede kamer/eerste kamer opgesplits naar affil]
+    
+    [grafiek inter-politician inequality]
+    
+    [grafiek mean/median]
+    
+    [grafiek within pol affiliation deviations]
+    
+   
+\end{center}
 In the aggregate, then, given that the probability of being elected is not related to a politician's wealth, the wealth of the average socialist politician would be lower than that of their non-socialist peers. 
 
 \section{Wealth and Various Parliaments}
 Next, we proceed to investigate the average, and median wealth of parliament over time. In accordance with a theoretical and empirical literature on political selection, we might expect 
+
+\begin{center}
+    [Grafiek tweede kamer over time]
+    
+    [grafiek eerste kamer over time]
+    
+    [grafiek ministers over time]
+    
+    [grafiek laagste 10\% hoogste 10\%]
+    
+\end{center}
 
 \section{Conclusion}
 
@@ -111,9 +135,11 @@ This study investigated the wealth of the political elite in the Netherlands fro
 Pol Affil (\& pillarization)
 Representative Body
 
+This work contributes firstly to research in the 20th century focusing on the social origin of politicians by asking how rich political elites are, and to which extent the wealth of the political elite is concentrated. \autocite{van1983toegang, secker1989social, secker1991ministers, van1999eerste, moes2012onder} Secondly, this work brings insight in the mechanisms at play of political selection, the correlation of wealth with political party, and the possible mechanisms leading from suffrage and electoral competition to changing political representation.  \autocite{besley2005political, dal2018progress}
+
 The findings of this paper call for further research into the discrepancy between politicians and the electorate: it is unlikely that the findings of this paper can be generalized uncritically to other (Western) European countries. While the work by Piketty et al. on inequality in the modern era points to highly unequal societies in the late nineteenth and early twentieth centuries, it does not automatically follow that politicians always find themselves in the upper quantiles of the wealth distribution. \autocite{piketty2003income, piketty2014inequality} It is plausible that there are large cross-country, and cross-regional variations, even among Western European countries, because of two reasons: first, each nascent democracy bears the marks of its own (unique) past, and second, institutional variation and cultural and religious heritage might have influenced the degree to which political elites are representative. \autocite{acemoglu2011consequences} \footnote{Despite the Netherlands sharing a quite similar pattern of democratic transition with several other Western European countries, there are also countries in which democratic transition happened in a much more turbulent manner, e.g. France. }
 
-Furthermore, the findings also stress the need for research that investigates the likely consequences of this discrepancy. More specifically, the influence of politicians' personal interest on their decision-making must be investigated, not only in a specific setting or country, but also much more generally. Contemporary research shows that politicians' wealth influences their decision-making, and the same could be true historically, which is all the more plausible given weaker constraints on governance, and an institutional context in which (nascent) democracies are less responsive. \autocite{tahoun2019personal}. Similarly, the  degree to which politicians' own interest dictate their decision-making might itself be dependent on a host of other factors: consistent with politicians being constrained by electorates and other mechanisms, the degree to which politicians can act according to their own interests might vary from country to country. \autocite{djankov2010disclosure}
+Furthermore, the findings also stress the need for research that investigates the likely consequences of this discrepancy. More specifically, the influence of politicians' personal interest on their decision-making must be investigated, not only in a specific setting or country, but also much more generally. Contemporary research shows that politicians' wealth influences their decision-making, and the same could be true historically, which is all the more plausible given weaker constraints on governance, and an institutional context in which (nascent) democracies are less responsive. \autocite{tahoun2019personal} Similarly, the  degree to which politicians' own interest dictate their decision-making might itself be dependent on a host of other factors: consistent with politicians being constrained by electorates and other mechanisms, the degree to which politicians can act according to their own interests might vary from country to country. \autocite{djankov2010disclosure}
 
 More broadly, the findings call for further research into the extent and quality of representation and its effects as a function of various factors, of which wealth is but one aspect. It is also highly likely that the effect of the quality of representation on legislation or economic development is heterogeneous. It might, for example, vary strongly, depending on political institutions, democratic responsiveness, electoral competition, and dissemination of information by a functioning press. Research in Europe has recently taken into account characteristics such as political dynasties, the threat of revolution, and electoral opportunism. \autocite{aidt2014workers, oosterlinck2020positive, aidt2019motivates} Accordingly, this study suggests that the literature can be more attentive to explicit personal interests of politicians, such as wealth. 
 
