--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
@@ -289,4 +289,77 @@ url="http://hdl.handle.net/10622/QK8VRF"
   publisher={Elsevier}
 }
 
+@book{van1999eerste,
+  title={De Eerste Kamer: geschiedenis, samenstelling en betekenis 1815-1995},
+  author={van den Braak (Bert H.)},
+  year={1999},
+  publisher={Rijksuniversiteit Leiden}
+}
+
+@book{van2018tussen,
+  title={Tussen geschiktheid en grondrecht: de ontwikkeling van het Nederlandse kiesrecht vanaf 1795},
+  author={van der Kolk, Henk and van Schie, Patrick and de Beaufort, Fleur and van den Berg, Peter and de Jong, Ron},
+  year={2018},
+  publisher={Amsterdam University Press}
+}
+
+@book{moes2012onder,
+  title={Onder aristocraten: over hegemonie, welstand en aanzien van adel, patriciaat en andere notabelen in Nederland, 1848-1914},
+  author={Moes, Jaap},
+  volume={9},
+  year={2012},
+  publisher={Uitgeverij Verloren}
+}
+
+@inproceedings{secker1989social,
+  title={The social composition of Dutch political elites: ministers and deputies (1848-1986)},
+  author={Secker, Ineke},
+  booktitle={Tagung" Sozialstruktur und politische Konflikte in Deutschland 1867-1987. Perspektiven einer Analyse von Massendaten der historischen Wahl-und Elitenforschung"},
+  volume={22},
+  pages={323--337},
+  year={1989},
+  organization={Scripta Mercaturae Verl.}
+}
+
+@article{dal2018progress,
+  title={Progress and perspectives in the study of political selection},
+  author={Dal B{\'o}, Ernesto and Finan, Frederico},
+  journal={Annual Review of Economics},
+  volume={10},
+  pages={541--575},
+  year={2018},
+  publisher={Annual Reviews}
+}
+
+@article{moes1994lijsten,
+  title={De lijsten van verkiesbaren voor de Eerste Kamer der Staten-Generaal, 1848-1917},
+  author={Moes, JKS},
+  journal={Broncommentaren I (’s-Gravenhage 1994)},
+  pages={119--171}
+}
+
+@book{bosmans2011parlementaire,
+  title={Parlementaire geschiedenis van Nederland},
+  author={Bosmans, Jacques Louis Joseph and van Kessel, ACMW},
+  year={2011},
+  publisher={Amsterdam: Boom}
+}
+
+@book{blok1987stemmen,
+  title={Stemmen en kiezen: het kiesstelsel in Nederland in de periode 1814-1850},
+  author={Blok, Lodewijk},
+  volume={47},
+  year={1987},
+  publisher={Wolters-Noordhoff/Egbert Forsten}
+}
+
+@article{bos1989memories,
+  title={De memories van successie. Een veelbelovende bron voor veelsoortig onderzoek},
+  author={Bos, Nick},
+  journal={Spiegel Historiael},
+  volume={24},
+  pages={120--126},
+  year={1989}
+}
+
 
