--- a/Code/clean_names.ipynb
+++ b/Code/clean_names.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1858,13 +1858,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#define function\n",
     "def cleanname(text):\n",
-    "    text = re.sub(\" vanaf (.+)| tot (.+)| \\\\[\\d\\\\]| \\\\(overleden(.+)\\\\)| \\\\([A-Z]+\\\\)| van \\d{2} (.+)\", \"\", text)\n",
+    "    text = re.sub(\" vanaf (.+)| tot (.+)| \\\\[\\d\\\\]| \\\\(overleden(.+)\\\\)| \\\\([A-Z]+\\\\)| van \\d{1,2} (.+)\", \"\", text)\n",
     "    return text\n",
     "\n",
     "#clean\n",
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2044,7 +2044,7 @@
       "160           56            Matthias Margarethus van Asch van Wijck  1875-1879\n",
       "161           57  Isaäc Lambertus Cremer van den Berch van Heems...  1875-1879\n",
       "162           58                     Marinus Bichon van IJsselmonde  1875-1879\n",
-      "163           59  Frans Julius Johan van Heemstra van 9 november...  1875-1879\n",
+      "163           59                    Frans Julius Johan van Heemstra  1875-1879\n",
       "164           60                               Johan Louis de Jonge  1875-1879\n",
       "165           61                                     Abraham Kuyper  1875-1879\n",
       "166           62                                Jan Willem van Loon  1875-1879\n",
@@ -2682,7 +2682,7 @@
       "798          105                         Henri Adolphe van de Velde  1888-1891\n",
       "799          106                                    Willem Mutsaers  1888-1891\n",
       "800          107  Franciscus Theodorus Johannes Hubertus Dobbelmann  1888-1891\n",
-      "801          108                      Ernest d'Olne van 9 juli 1889  1888-1891\n",
+      "801          108                                      Ernest d'Olne  1888-1891\n",
       "802          109                                      George Diepen  1888-1891\n",
       "803          110                                 Henri Daniël Guyot  1888-1891\n",
       "804          111                              Abraham van Karnebeek  1888-1891\n",
@@ -2789,7 +2789,7 @@
       "905          100                                    Meinard Tydeman  1891-1894\n",
       "906          101                                      Antoine Plate  1891-1894\n",
       "907          102                     Theodore Gerard Glaude Valette  1891-1894\n",
-      "908          103        Jacobus Petrus Havelaar van 1 december 1891  1891-1894\n",
+      "908          103                            Jacobus Petrus Havelaar  1891-1894\n",
       "909          104                                   Æneas Mackay jr.  1891-1894\n",
       "910          105                                     Theo Heemskerk  1891-1894\n",
       "911          106              Alexander Frederik de Savornin Lohman  1891-1894\n",
@@ -3024,7 +3024,7 @@
       "1140         102           Vincentius Adrianus Maria van den Heuvel  1897-1901\n",
       "1141         103                                Frans Jozef Bolsius  1897-1901\n",
       "1142         104                     Willem Caspar Joseph Passtoors  1897-1901\n",
-      "1143         105                    Albertus van Delden van 1 maart  1897-1901\n",
+      "1143         105                                Albertus van Delden  1897-1901\n",
       "1144         106                          Rudolf Pieter Mees R.Azn.  1897-1901\n",
       "1145         107                         Willem Hendrik de Beaufort  1897-1901\n",
       "1146         108                           Floris Willem van Styrum  1897-1901\n",
@@ -3284,7 +3284,7 @@
       "1400          26                                Johan Heinrich Blum  1909-1913\n",
       "1401          27                  Allard van der Borch van Verwolde  1909-1913\n",
       "1402          28                            Anthony Brummelkamp jr.  1909-1913\n",
-      "1403          29                 Hendrik Colijn van 9 november 1909  1909-1913\n",
+      "1403          29                                     Hendrik Colijn  1909-1913\n",
       "1404          30                         Lodewijk Duymaer van Twist  1909-1913\n",
       "1405          31                                     Gerrit Elhorst  1909-1913\n",
       "1406          32                             Jan Frederik Heemskerk  1909-1913\n",
@@ -3382,7 +3382,7 @@
       "1498          16                                        Wiel Nolens  1913-1917\n",
       "1499          17                      Charles Ruijs de Beerenbrouck  1913-1917\n",
       "1500          18                     Alexander van Sasse van Ysselt  1913-1917\n",
-      "1501          19               Victor de Stuers van 5 februari 1914  1913-1917\n",
+      "1501          19                                   Victor de Stuers  1913-1917\n",
       "1502          20         Bernardus Reinierus Franciscus van Vlijmen  1913-1917\n",
       "1503          21               Adrianus Cornelis Antonie van Vuuren  1913-1917\n",
       "1504          22                     Franciscus Hubertus van Wichen  1913-1917\n",
@@ -3713,7 +3713,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# correct a few names manually so they are easier to match\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3723,7 +3732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3732,7 +3741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4271,7 +4280,7 @@
       "528           47                    Karel Antonie Godin de Beaufort  1896-1899\n",
       "529           48    Jan Elias Nicolaas Schimmelpenninck van der Oye  1896-1899\n",
       "530           49    Willem Constantijn van Pallandt van Waardenburg  1896-1899\n",
-      "531           50         Cornelis Jacob Sickesz van 1 december 1896  1896-1899\n",
+      "531           50                             Cornelis Jacob Sickesz  1896-1899\n",
       "532           51                                          Dirk Laan  1896-1899\n",
       "533           52           Jan Willem Hendrik Rutgers van Rozenburg  1896-1899\n",
       "534           53                                         Joan Röell  1896-1899\n",
@@ -4831,13 +4840,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#cut a few redundant lines\n",
     "data = data[:1065]\n",
     "\n",
+    "\n",
+    "#correct a few names manually so they are easier to match\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#write to csv\n",
     "data.to_csv(\"../Data/upperhouse_clean.csv\", index = False)"
    ]
