new vers paper, figures

--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/references.bib
@@ -1,12 +1,12 @@
-@Misc{deZwart2015,
-author="de Zwart, Pim
-and van Leeuwen, Bas
-and van Leeuwen-Li, Jieli",
-title="Labourers Real Wage",
-year="2015",
-publisher="IISH Dataverse",
-url="http://hdl.handle.net/10622/QK8VRF"
-}
+%@Misc{deZwart2015,
+%author="de Zwart, Pim
+%and van Leeuwen, Bas
+%and van Leeuwen-Li, Jieli",
+%title="Labourers Real Wage",
+%year="2015",
+%publisher="IISH Dataverse",
+%url="http://hdl.handle.net/10622/QK8VRF"
+%}
 
 @book{oud1961honderd,
   title={Honderd jaren},
@@ -168,6 +168,18 @@ url="http://hdl.handle.net/10622/QK8VRF"
   year={2009},
   publisher={Springer}
 }
+
+@article{cocco2005portfolio,
+  title={Portfolio choice in the presence of housing},
+  author={Cocco, Joao F},
+  journal={The Review of Financial Studies},
+  volume={18},
+  number={2},
+  pages={535--567},
+  year={2005},
+  publisher={Oxford University Press}
+}
+
 
 @article{bernini2018race,
   title={Race, representation and local governments in the US South: The effect of the Voting Rights Act},
@@ -362,4 +374,8 @@ url="http://hdl.handle.net/10622/QK8VRF"
   year={1989}
 }
 
-
+@article{de2020exploring,
+  title={Exploring Long-term Income and Wealth Inequality in the Netherlands, c. 1880-1960},
+  author={De Vicq, Amaury and van der Valk, T. and Moatsos, M.},
+  journal={Working Paper}
+}
