--- a/Paper/The Wealth of Dutch Politicians (1870-1922)/preamble.tex
+++ b/Paper/The Wealth of Dutch Politicians (1870-1922)/preamble.tex
@@ -101,3 +101,13 @@
 
 \titlespacing*{\section}{0pt}{1.5ex plus 1ex minus .2ex}{0.8ex plus .2ex}
 \titlespacing*{\subsection}{0pt}{1.2ex plus 1ex minus .2ex}{0.8ex plus .2ex}
+
+
+%%%%%%%%%%%%%%%%%%% 
+% LANDSCAPE
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\usepackage{lscape}
+
+%%% TABLES
+
+\usepackage{subfig}
